# audio_video_streamer

./: .envrc  .gitignore  pyproject.toml  requirements.txt  requirements_win.txt  setup.py
dev/: main.py  multi_process_example.py  transcription_example.py  webrtc_client.py
pipeline/: audio_detect.py  audio_detect.pyi  audio_diarization.py  constant.py  constant.pyi  face_detect.py  face_detect.pyi  multi_process_example.py  processing.py  processing.pyi  streaming.py  streaming.pyi  streaming_client.html  streaming_server.py  transcription_example.py  webrtc_client.py
test_data/: 2 people conversation.opus
